Small fixes to make provider work e2e
